Bug 339818 - refix uneven quote bar spacing after I accidently clobbered it, patch by Tuukka Tolvanen <tuukka.tolvanen@gmail.com>, r=me

--- a/mail/themes/qute/mail/messageQuotes.css
+++ b/mail/themes/qute/mail/messageQuotes.css
@@ -19,8 +19,8 @@
 /* ::::: Turn on borders and padding for quotes. ::::: */
 
 blockquote[type=cite] {
-  padding: 0em .5em .5em 1em;
-  border-right: 2px  solid;
+  padding: 0em 1em .5em;
+  border-right: 2px solid;
   border-left: 2px solid;
 }
 
